--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-  <!-- carousel -->
-  <link href="css/owl.carousel.css" rel="stylesheet" type="text/css">
-
   <!-- responsive -->
   <link href="css/responsive.css" rel="stylesheet" type="text/css">
 
@@ -76,93 +73,54 @@
 
 <body class="module-home" data-spy="scroll" data-target=".navbar">
 
-
-
-  <!-- header -->
-
-  <header role="header" class="header-top" id="headere-top">
-
-
-
+<!-- header -->
+<header role="header" class="header-top" id="headere-top">
     <div class="header-fixed-wrapper" role="header-fixed">
-
       <div class="container">
-
         <!-- hgroup -->
-
         <hgroup class="row">
 
           <!-- logo -->
-
           <div class="col-xs-5 col-sm-2 col-md-2 col-lg-2">
-
             <h1>
-
-
-              <a href="#headere-top" id="danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;" /></a>
-
+              <a href="#headere-top" id="danceEvolutionLogo" title="Rooky">
+                  <img src="images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;" />
+              </a>
             </h1>
-
           </div>
-
           <!-- logo -->
 
           <!-- nav -->
-
           <nav role="navigation" class="col-xs-12 col-sm-10 col-md-10 col-lg-10 navbar navbar-default">
-
             <div class="navbar-header">
-
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-
                 <span class="sr-only">Toggle navigation</span>
-
                 <span class="icon-bar"></span>
-
                 <span class="icon-bar"></span>
-
                 <span class="icon-bar"></span>
-
               </button>
-
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
-
               <ul class="nav navbar-nav">
-
                 <li class="active"><a href="#headere-top" title="Home">Home</a></li>
-
                 <li><a href="#section-one" title="Overview">Overview</a></li>
-
                 <li><a href="#section-two" title="Features">Features</a></li>
-
                 <li><a href="#section-three" title="Pricing">Programs</a></li>
-
                 <li><a href="#section-four" title="Team">Team</a></li>
-                <!--
-                                    <li><a href="#section-five" title="Contact">Contact</a></li>
-                                  -->
-                <!-- <li><a href="#section-six" title="Join Us">Info</a></li> -->
-
+<!--                <li><a href="#section-five" title="Contact">Contact</a></li>-->
+<!--                <li><a href="#section-six" title="Join Us">Info</a></li>-->
               </ul>
-
             </div>
-
           </nav>
-
           <!-- nav -->
 
         </hgroup>
-
         <!-- hgroup -->
-
       </div>
-
     </div>
 
     <!-- banner Text -->
-
     <section class="text-center" style="overflow-x: hidden">
 
       <h2>Dance Evolution</h2>
@@ -193,184 +151,104 @@
           </div>
         </div>
       </div>
-
-
     </section>
-
-
-
     <!-- banner Text -->
 
-
-
     <!-- banner image -->
-
     <figure>
-
-      <div class="parallax-window item tp-banner-container container-fluid" data-parallax="scroll" data-image-src="images/daveShelly.JPG"></div>
-
+      <div class="parallax-window item tp-banner-container container-fluid" data-parallax="scroll" data-image-src="images/daveShelly.jpg"></div>
     </figure>
-
     <!-- banner image -->
 
-  </header>
+</header>
+<!-- header -->
 
-  <!-- header -->
-
-
-
-  <!-- main -->
-
-  <main role="main" id=" main-wrapper">
-
+<!-- main -->
+<main role="main" id=" main-wrapper">
     <!-- section-one -->
-
     <section class="section-one text-center" id="section-one">
-
       <div class="container">
-
         <header role="title-page">
-
           <h4>What we do</h4>
-
           <h2>We make our studio<br />your second home.</h2>
-
         </header>
 
         <article>
-
           <p style="text-align: justify; text-justify: inter-word;">
             Come experience the best Dancesport youth training club in the NJ and NYC region. We understand that searching for the right type of club that’s fit for developing great dancers at any age is a big decision. We here at Dance Evolution
             want to make the choice an easy one. Since 2013, Inna and the Dance Evolution team have developed an excellent team of instructors that continue to grow and produce beautiful champion dancers. From the first day a dancer starts at our
             studio until the last, we aim to promote every individual's core talents and strengths. We value cooperation among peers, strong team building skills, and respect for the discipline and art of dance. We offer training in various styles of
             competitive Ballroom Dancesport and we know you'll find a great home here at our studio. We welcome your visit.
           </p>
-
         </article>
-
       </div>
-
     </section>
-
     <!-- section-one -->
 
-
-
     <!-- section-two -->
-
     <section class="section-two" id="section-two">
-
-
-
       <!-- image-content -->
-
       <section>
-
         <div class="col-sm-6 col-md-6">
-
           <article>
-
             <h2>Benefits of Dance</h2>
-
             <p></p>
-
             <ul>
-
               <li>Self Confidence</li>
-
               <li>Team Collaboration</li>
-
               <li>Improvement in Memory</li>
-
               <li>Strengthened Neuron Connectivity</li>
-
               <li>Increase in Self Worth</li>
-
               <li>Sportsmanship</li>
-
-
-
-              <!--
-                                <li>Studies using PET imaging have identified regions of the brain that contribute to dance learning and performance including the motor cortex, somatosensory cortex, basal ganglia, and cerebellum.</li>
-                                -->
+<!--              <li>Studies using PET imaging have identified regions of the brain that contribute to dance learning and performance including the motor cortex, somatosensory cortex, basal ganglia, and cerebellum.</li>-->
             </ul>
-
           </article>
-
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 mobile-hide">
-
           <figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
-
         </div>
-
       </section>
-
       <!-- image-content -->
 
       <div class="clearfix"></div>
 
       <!-- image-content -->
-
       <section>
-
         <div class="col-xs-12 col-sm-6 col-md-6 mobile-hide">
-
           <figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
-
         </div>
-
         <div class="col-sm-6 col-md-6">
-
           <article>
-
             <!-- <h2>Testimonials</h2> -->
-
             <p>"This is a dance studio that stands out because of their great leadership and complete dedication to their students. They treat us like family.
               - <b>Peter K.</b></p>
-
             <p>If you are looking for dance school for your child look no further. If you are looking for best instructors with years of experience and who are dancers themselves, look no further. If you are looking for new friends, join Dance
               Evolution Club and you and your child will find new family and another place you will call home.
               - <b>Marina K.</b>
             </p>
-
             <p>The best dance school. I have both kids (boy and a girl, 10 & 7) in school learning to dance, friendship, and much more. They became much more organize, athletic and became much better. I enjoy seeing my kids competing with others in
               dance completion all over the US. Thank you to wonderful coaches and leader of the school. Highly recommend
               - <b>Eugene S.</b>
             </p>
           </article>
-
         </div>
-
       </section>
-
       <!-- image-content -->
 
       <div class="clearfix"></div>
-
-
     </section>
-
     <!-- section-two -->
 
-
-
     <!-- section-three -->
-
     <section class="section-three" id="section-three">
-
       <div class="container">
-
         <header role="title-page" class="text-center">
-
           <h4>Dance Evolution Club Programs</h4>
           <h2>Group Class Schedule</h2>
-
         </header>
 
         <div class="pricing">
-
           <figure>
               <div style="display: flex;justify-content: center;" >
                   <table style="border-collapse: separate;border-spacing: 5px 10px">
@@ -444,31 +322,17 @@
                   </table>
               </div>
           </figure>
-
         </div>
-
-        <!-- pricing -->
-
       </div>
-
     </section>
-
     <!-- section-three -->
 
-
-
     <!-- section-four -->
-
     <section class="section-four" id="section-four">
-
       <div class="container">
-
         <header role="title-page" class="text-center">
-
           <h4></br>Meet The Team</h4>
-
           <h2>Our team is passionate about bringing the <br />best for our customers.</h2>
-
         </header>
 
         <!-- Team -->
@@ -500,8 +364,6 @@
                     <h5>Agita Baranovska</h5>
                 </header>
             </section>
-
-
         </div>
         <!--=============================================================================== -->
         <div class="row mt-3"><br></div>
@@ -533,7 +395,6 @@
                     <h5>Dave Firestein</h5>
                 </header>
             </section>
-
         </div>
         <!--=============================================================================== -->
         <div class="row mt-3"><br></div>
@@ -563,94 +424,40 @@
                     <h5>Pavel Ivanov and Veronica Baranova</h5>
                 </header>
             </section>
-
         </div>
         <!--=============================================================================== -->
         <div class="row mt-3"><br></div>
-
         <!-- Team -->
 
       </div>
       </br>
     </section>
-
     <!-- section-four -->
 
     <!-- footer -->
-
     <footer role="footer" class="footer text-center">
-
       <div class="container">
-
         <!-- socil-icons -->
-
         <section role="socil-icons" class="socil-icons">
-
           <div class="container"></div>
-
           <a href="https://www.facebook.com/DanceEvolutionClub/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           <a href="https://www.instagram.com/dance.evolution.club/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-
         </section>
-
         <!-- socil-icons -->
-
-        <!-- nav -->
-
-        <!-- <nav role="footer-nav">
-
-                        <a href="#">Terms of Use </a>
-
-                        <a href="#">Privacy Policy</a>
-
-                    </nav> -->
-
-        <!-- nav -->
-        <!--
-                    <p class="copy">&copy; 2016 Sartr. All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p> -->
-
       </div>
-
     </footer>
-
     <!-- footer -->
+</main>
+<!-- main -->
 
-
-
-  </main>
-
-  <!-- main -->
-
-
-
-
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-  <script src="js/jquery.min.js" type="text/javascript"></script>
-
-
-
-  <script src="js/parallax.min.js" type="text/javascript"></script>
-
-  <script type="text/javascript">
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/parallax.min.js" type="text/javascript"></script>
+<script type="text/javascript">
     $('.parallax-window').parallax({});
-  </script>
-
-  <script src="js/main.js" type="text/javascript"></script>
-
-  <script src="js/owl.carousel.js" type="text/javascript"></script>
-
-  <script src="js/custom.js" type="text/javascript"></script>
-
-  <script src="js/jquery.contact.js" type="text/javascript"></script>
-
-  <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-  <script src="js/html5shiv.min.js" type="text/javascript"></script>
-
-
+</script>
+<script src="js/main.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 </body>
-
 </html>
