about us update

--- a/index.html
+++ b/index.html
@@ -169,10 +169,8 @@
 
             <article>
                 <p style="text-align: justify; text-justify: inter-word;">
-                    Come experience the best Dancesport youth training club in the NJ and NYC region. We understand that searching for the right type of club that’s fit for developing great dancers at any age is a big decision. We here at Dance Evolution
-                    want to make the choice an easy one. Since 2013, Inna and the Dance Evolution team have developed an excellent team of instructors that continue to grow and produce beautiful champion dancers. From the first day a dancer starts at our
-                    studio until the last, we aim to promote every individual's core talents and strengths. We value cooperation among peers, strong team building skills, and respect for the discipline and art of dance. We offer training in various styles of
-                    competitive Ballroom Dancesport and we know you'll find a great home here at our studio. We welcome your visit.
+                    Our mission is to develop strong, confident, and passionate ballroom dancers who excel on and off the competition floor.
+                    We provide world-class instruction, mentorship, and performance opportunities that empower both youth and adults to reach their full potential in dance and in life.
                 </p>
             </article>
         </div>
