photo updates and small tweaks

--- a/index.html
+++ b/index.html
@@ -130,17 +130,19 @@
             <div class="col-sm-3 col-md-5"></div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                 <div style="text-align: left;display: flex;flex-direction: column;color:white;">
-                    <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782"
-                       target="_blank"
-                    >
+
                         <div style="display:flex;align-items:center;gap:0.5rem;">
-                            <i class="material-icons" style="font-size:36px;color:white">place</i>
-                            <span>479 N Midland Ave Saddle Brook, NJ 07663</span>
+                            <i class="material-icons" style="font-size:36px;text-decoration: none;">place</i>
+                            <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782"
+                               target="_blank"
+                               style="color: inherit;"
+                            >
+                                479 N Midland Ave Saddle Brook, NJ 07663
+                            </a>
                         </div>
-                    </a>
                     <div style="display:flex;align-items:center;gap:0.5rem;">
                         <i class="material-icons" style="font-size:36px;color:white">&#xe551;</i>
-                        <span>201-791-6060</span>
+                        <a href="tel:+12017916060" style="color: inherit;">201-791-6060</a>
                     </div>
                 </div>
             </div>
@@ -341,7 +343,7 @@
 
                 <section class="col-xs-12 col-sm-6 col-md-4">
                     <figure>
-                        <img src='images/aigars.jpg' alt="" class=" img-responsive" />
+                        <img src='images/aigars1.jpg' alt="" class=" img-responsive" />
                     </figure>
                     <header>
                         <h5>Aigars Stolcers</h5>
@@ -350,7 +352,7 @@
 
                 <section class="col-xs-12 col-sm-6 col-md-4">
                     <figure>
-                        <img src='images/aa.JPG' alt="" class=" img-responsive" />
+                        <img src='images/agita1.jpg' alt="" class=" img-responsive" />
                     </figure>
                     <header>
                         <h5>Agita Baranovska</h5>
@@ -406,7 +408,7 @@
                 </section>
                 <section class="col-xs-12 col-sm-6 col-md-4">
                     <figure>
-                        <img src='images/PavelVeronica.jpg' alt="" class=" img-responsive" />
+                        <img src='images/PavelVeronica1.jpg' alt="" class=" img-responsive" />
                     </figure>
                     <header>
                         <h5>Pavel Ivanov and Veronica Baranova</h5>
