--- a/index.html
+++ b/index.html
@@ -131,18 +131,18 @@
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                 <div style="text-align: left;display: flex;flex-direction: column;color:white;">
 
-                        <div style="display:flex;align-items:center;gap:0.5rem;">
-                            <i class="material-icons" style="font-size:36px;text-decoration: none;">place</i>
-                            <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782"
-                               target="_blank"
-                               style="color: inherit;"
-                            >
-                                479 N Midland Ave Saddle Brook, NJ 07663
-                            </a>
-                        </div>
+                    <div style="display:flex;align-items:center;gap:0.5rem;">
+                        <i class="material-icons" style="font-size:36px;text-decoration: none;">place</i>
+                        <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782"
+                           target="_blank"
+                           style="color: inherit;padding:0"
+                        >
+                            479 N Midland Ave Saddle Brook, NJ 07663
+                        </a>
+                    </div>
                     <div style="display:flex;align-items:center;gap:0.5rem;">
                         <i class="material-icons" style="font-size:36px;color:white">&#xe551;</i>
-                        <a href="tel:+12017916060" style="color: inherit;">201-791-6060</a>
+                        <a href="tel:+12017916060" style="color: inherit;padding:0">201-791-6060</a>
                     </div>
                 </div>
             </div>
